@@ -1,7 +1,8 @@
 dnl
 dnl autoconf input file for ``GNU grep''
 dnl
-dnl Copyright (C) 1997-2004 the Free Software Foundation, Inc.
+dnl Copyright (C) 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004,
+dnl 2005 the Free Software Foundation, Inc.
 dnl
 dnl This file is part of GNU grep.
 dnl
@@ -64,7 +65,6 @@ AC_CHECK_HEADERS(string.h stdlib.h sys/param.h memory.h unistd.h libintl.h)
 AC_CHECK_HEADERS(wctype.h wchar.h)
 AC_HEADER_DIRENT
 AC_HEADER_STAT
-AC_MBSTATE_T
 
 dnl Checks for functions.
 AC_FUNC_ALLOCA
@@ -72,7 +72,11 @@ AC_FUNC_CLOSEDIR_VOID
 AC_FUNC_MMAP
 
 dnl getpagesize is checked for by AC_FUNC_MMAP.
-AC_CHECK_FUNCS(btowc isascii memmove setmode strerror wctype mbrtowc)
+AC_CHECK_FUNCS(btowc isascii iswctype mbrlen memmove setmode strerror wcrtomb wcscoll wctype)
+# We can use mbrtowc only if we have mbstate_t.
+AC_FUNC_MBRTOWC
+# Yet we need a mbstate_t stub in every case.
+AC_MBSTATE_T
 AC_REPLACE_FUNCS(memchr stpcpy strtoul atexit fnmatch)
 jm_AC_PREREQ_XSTRTOUMAX
 
